removed borders (issue on small screens)

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -7,6 +7,5 @@
     margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 10px rgba(0,0,0,0.4);
     padding: 100px 0;
 }
